--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="text-gray-900 antialiased leading-tight">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Discord UI</title>
   </head>
-  <body class="bg-gray-200">
+  <body>
     <noscript>
       <strong>We're sorry but Discord UI doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
